--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,29 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #181818;
+  background-color: #181818; 
   color: #e0e0e0;
   line-height: 1.6;
+  position: relative;
+  z-index: 0; 
 }
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('images/Coding Blog Image.jpg') no-repeat center center;
+  background-size: cover;
+  opacity: 0.1; 
+  z-index: -1; 
+  filter: blur(2px) grayscale(100%);
+}
+
 
 a {
   text-decoration: none;
@@ -223,6 +239,7 @@ section:hover {
   border-radius: 30px;
   font-size: 1.1rem;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  line-height: 3;
 }
 
 #resume a:hover {
