--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ section:hover {
   border-radius: 10px;
   padding: 20px;
   background-color: #333;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 6px 10px #00cfa1;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
